Bug 216735 - Superfluous "Column" text in top label
Summary: Superfluous "Column" text in top label
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: 2.0.0
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-29 23:01 UTC by Nicolas Brisset
Modified: 2010-11-12 10:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Brisset 2009-11-29 23:01:51 UTC
Version:           2.0.0_devel (using unspecified)
Compiler:          gcc 4.4.1 
OS:                Linux

When plotting data from an ASCII file without field names, "Column" is prepended to the column number, which is OK. But when the fields have names, "Column" should not be prepended.

Steps to reproduce:
- add label names in an ASCII file (e.g. gyrodata.dat: Dat1 Dat2 Dat3)
- load the file with the data wizard, configuring it so that the field names are read
- look at the top label: it reads "Column Dat1"
Comment 1 Netterfield 2009-12-11 17:34:20 UTC
SVN commit 1061398 by netterfield:

Get rid of unwanted top labels
BUG: 216736

Get rid of unwanted 'column' from ascii file column names
BUG: 216735

Convince Curve Dialog's edit multiple to not mess up.
BUG: 216740



 M  +1 -1      datasources/ascii/ascii.cpp  
 M  +2 -18     libkst/datavector.cpp  
 M  +9 -1      libkstapp/commandlineparser.cpp  
 M  +0 -1      libkstapp/curvedialog.cpp  
 M  +5 -2      widgets/vectorselector.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1061398
Comment 2 Peter Kümmel 2010-08-14 12:14:22 UTC
Change version from 2.0.0_devel to 2.0.0 to simplify version numbering.
Comment 3 Peter Kümmel 2010-11-12 10:42:10 UTC
These bugs are solved with 2.0.0