Get rid of unwanted top labels BUG: 216736

Get rid of unwanted 'column' from ascii file column names
BUG: 216735

Convince Curve Dialog's edit multiple to not mess up.
BUG: 216740



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1061398 283d02a7-25f6-0310-bc7c-ecb5cbfe19da